Braught up to date with SDK

--- a/TradingTest/TradingTest.csproj
+++ b/TradingTest/TradingTest.csproj
@@ -127,7 +127,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MeansReverionPaperOnly.cs" />
+    <Compile Include="MeanReversionPaperOnly.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
