--- a/TradingTest/packages.config
+++ b/TradingTest/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="NATS.Client" version="0.8.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
+  <package id="NLog" version="4.6.8" targetFramework="net472" />
   <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="net472" />
   <package id="System.Collections.Specialized" version="4.3.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
