--- a/TradingTest/TradingTest.csproj
+++ b/TradingTest/TradingTest.csproj
@@ -134,12 +134,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Stock.cs" />
+    <Compile Include="StockDataModel.cs" />
     <Compile Include="Scalper.cs" />
     <Compile Include="MeanReversionPaperOnly.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TradeEntry.cs" />
     <Compile Include="TradeLog.cs" />
+    <Compile Include="VolumeEstimate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
